// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFieldSearch is rendered 1`] = `
<oui-form-control-layout
  clear="[object Object]"
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <oui-validatable-control>
    <input
      aria-label="aria-label"
      class="ouiFieldSearch ouiFieldSearch-isClearable testClass1 testClass2"
      data-test-subj="test subject string"
      id="1"
      name="elastic"
      placeholder="Placeholder"
      type="search"
      value="1"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldSearch props append is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
  prepend="Append"
>
  <oui-validatable-control>
    <input
      class="ouiFieldSearch ouiFieldSearch--inGroup"
      type="search"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldSearch props fullWidth is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="true"
  icon="search"
  isloading="false"
>
  <oui-validatable-control>
    <input
      class="ouiFieldSearch ouiFieldSearch--fullWidth"
      type="search"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldSearch props isClearable is accepted 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <oui-validatable-control>
    <input
      class="ouiFieldSearch"
      type="search"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldSearch props isClearable is rendered when a value exists 1`] = `
<oui-form-control-layout
  clear="[object Object]"
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <oui-validatable-control>
    <input
      class="ouiFieldSearch ouiFieldSearch-isClearable"
      type="search"
      value="Hello"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldSearch props isInvalid is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
>
  <oui-validatable-control
    isinvalid="true"
  >
    <input
      class="ouiFieldSearch"
      type="search"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldSearch props isLoading is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="true"
>
  <oui-validatable-control>
    <input
      class="ouiFieldSearch ouiFieldSearch-isLoading"
      type="search"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldSearch props prepend is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="search"
  isloading="false"
  prepend="Prepend"
>
  <oui-validatable-control>
    <input
      class="ouiFieldSearch ouiFieldSearch--inGroup"
      type="search"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;
